--- a/todo
+++ b/todo
@@ -1,9 +1,36 @@
-todo
+realese todo
+
 
 much much more subtype list test
 
-make bool warping types packed, also small types in general?
-
 check if the user passed in classes or structs with private members to yell at them
 
-fix monkeytyping definitions to handle enums
+define opcall for pointy
+
+better error message everywhere
+
+void pointer addition on packed bools
+
+write aosoa to handel $ slice addition and a length overload
+
+a simd helper function
+
+make myslice condictions styled
+
+
+beta todo:
+vec3pointy
+vec3aosoa
+aosoa alias cleanup
+
+write a iterate mixin for slices
+
+unittests:
+vec3 vec2 addition
+vec2 vec3 addition
+pointy litteral addition
+writeing a meta function for slice
+writing a metafunction for aosoa
+a simd instruction
+assignment
+lots of slice genereation unittests
